--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="https://goal651.github.io/restaurant-website/src/main.jsx"></script>
 </body>
 
 </html>
